created discount section

--- a/index.html
+++ b/index.html
@@ -14,9 +14,24 @@
                 <h1>New Year Party <br>Celebration</h1>
             </div>
         </div>
+        
     </header>
     <main>
-
+        <div class="container">
+            <div class="discount-section">
+                <h1 class="discount-title">65% OFF</h1>
+                <p>OUR HOLIDAY DEALS ARE BETTER</p>
+                <h3>ALL CATEGORIES</h3>
+                <img src="images/New Year Photo.png" alt="">
+            </div>
+        </div>
+        <div class="container">
+            <div class="welcome-section">
+                <h1>Welcome to <br> midnight party</h1>
+                <p>You are most welcome to our new year party. You just need to be open minded to join this party.We provide proper security at the time of our events. </p>
+                <p>Join Now</p>
+            </div>
+        </div>
     </main>
     <footer>
 
