welcome sectiona added

--- a/index.html
+++ b/index.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Year New Mission</title>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
     <header>
-        <div class="container">
-            <div class="banner-section">
-                <p>Happy New Year</p>
-                <h1>New Year Party <br>Celebration</h1>
-            </div>
+      <div class="container">
+        <div class="banner-section">
+          <p>Happy New Year</p>
+          <h1>New Year Party <br />Celebration</h1>
         </div>
-        
+      </div>
     </header>
     <main>
-        <div class="container">
-            <div class="discount-section">
-                <h1 class="discount-title">65% OFF</h1>
-                <p>OUR HOLIDAY DEALS ARE BETTER</p>
-                <h3>ALL CATEGORIES</h3>
-                <img src="images/New Year Photo.png" alt="">
-            </div>
+      <div class="container">
+        <div class="discount-section">
+          <h1 class="discount-title">65% OFF</h1>
+          <p>OUR HOLIDAY DEALS ARE BETTER</p>
+          <h3>ALL CATEGORIES</h3>
+          <img src="images/New Year Photo.png" alt="" />
         </div>
-        <div class="container">
-            <div class="welcome-section">
-                <h1>Welcome to <br> midnight party</h1>
-                <p>You are most welcome to our new year party. You just need to be open minded to join this party.We provide proper security at the time of our events. </p>
-                <p>Join Now</p>
-            </div>
+      </div>
+      <div class="container">
+        <div class="welcome-section">
+          <div class="text">
+            <h1>
+              Welcome to <br />
+              midnight party
+            </h1>
+            <p>
+              You are most welcome to our new year party. You just need to be
+              open minded to join this party.We provide proper security at the
+              time of our events.
+            </p>
+            <p class="join">Join Now</p>
+          </div>
+          <img src="images/Group_70.png" alt="">
         </div>
+      </div>
     </main>
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
