--- a/index.html
+++ b/index.html
@@ -41,6 +41,33 @@
           <img src="images/Group_70.png" alt="">
         </div>
       </div>
+      <div class="container">
+        <div class="joining-section">
+            <p><span class="schedule">Place:</span> New Park Hotel</p>
+            <p><span class="schedule">Date:</span> 31 December Night 2023</p>
+            <p><span class="schedule">Time:</span> Evening 7.30 pm to 12.30 am</p>
+            <div class="btn">
+                <button class="primary-btn">Join Now</button>
+            </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="coming-soon">
+            <div class="text-1">
+                <h6>NEW BEST OFFER</h6>
+                <h4>Coming Soon</h4>
+                <p>We are bringing some amazing gifts and events for our new year party. Besides you will see the original party celebration. There will be an event "Ask for dance".</p>
+            </div>
+            <div class="circular-img">
+                <img src="images/Ellipse 1.png" alt="celebrate together">
+            </div>
+            <div class="text-2">
+                <h3>2024</h3>
+                <p>Let's forget about our sad moments and start new year warmly. We should take proper steps to make right the wrong.</p>
+                <img class="lower-img" src="images/Group 96.png" alt="happy new year">
+            </div>
+        </div>
+      </div>
     </main>
     <footer></footer>
   </body>
