subscribe section added

--- a/index.html
+++ b/index.html
@@ -38,33 +38,82 @@
             </p>
             <p class="join">Join Now</p>
           </div>
-          <img src="images/Group_70.png" alt="">
+          <img src="images/Group_70.png" alt="" />
         </div>
       </div>
       <div class="container">
         <div class="joining-section">
-            <p><span class="schedule">Place:</span> New Park Hotel</p>
-            <p><span class="schedule">Date:</span> 31 December Night 2023</p>
-            <p><span class="schedule">Time:</span> Evening 7.30 pm to 12.30 am</p>
-            <div class="btn">
-                <button class="primary-btn">Join Now</button>
-            </div>
+          <p><span class="schedule">Place:</span> New Park Hotel</p>
+          <p><span class="schedule">Date:</span> 31 December Night 2023</p>
+          <p><span class="schedule">Time:</span> Evening 7.30 pm to 12.30 am</p>
+          <div class="btn">
+            <button class="primary-btn">Join Now</button>
+          </div>
         </div>
       </div>
       <div class="container">
         <div class="coming-soon">
-            <div class="text-1">
-                <h6>NEW BEST OFFER</h6>
-                <h4>Coming Soon</h4>
-                <p>We are bringing some amazing gifts and events for our new year party. Besides you will see the original party celebration. There will be an event "Ask for dance".</p>
+          <div class="text-1">
+            <h6>NEW BEST OFFER</h6>
+            <h4>Coming Soon</h4>
+            <p>
+              We are bringing some amazing gifts and events for our new year
+              party. Besides you will see the original party celebration. There
+              will be an event "Ask for dance".
+            </p>
+          </div>
+          <div class="circular-img">
+            <img src="images/Ellipse 1.png" alt="celebrate together" />
+          </div>
+          <div class="text-2">
+            <h3>2024</h3>
+            <p>
+              Let's forget about our sad moments and start new year warmly. We
+              should take proper steps to make right the wrong.
+            </p>
+            <img
+              class="lower-img"
+              src="images/Group 96.png"
+              alt="happy new year"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="portfolio-section">
+          <div class="text-part">
+            <h6>THE BEST GIFTS</h6>
+            <h4>Our Awesome Portfolio</h4>
+            <p>
+              Check our latest products those arived this week. These are
+              limited edition. So grab yours as soon as possible.
+            </p>
+          </div>
+          <div class="images">
+            <div class="box-1">
+                <img src="images/Rectangle 3.png" alt="handbag">
+                <img src="images/Rectangle 4.png" alt="handbag">
+                <img src="images/Rectangle 5.png" alt="hill">
             </div>
-            <div class="circular-img">
-                <img src="images/Ellipse 1.png" alt="celebrate together">
+            <div class="box-2">
+                <img src="images/Rectangle 6.png" alt="hill">
+                <img src="images/Rectangle 7.png" alt="sun glass">
+                <img src="images/Rectangle 8.png" alt="bangles">
             </div>
-            <div class="text-2">
-                <h3>2024</h3>
-                <p>Let's forget about our sad moments and start new year warmly. We should take proper steps to make right the wrong.</p>
-                <img class="lower-img" src="images/Group 96.png" alt="happy new year">
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="subscribe-section">
+            <div class="content">
+                <img src="images/Group 61.png" alt="latter box">
+                <h1>Subscribe Newsletter</h1>
+                <p>If you are new here subscribe for getting latest news about our products. let us know your email where we will keep you update to meet your needs best.</p>
+                <div class="email-field">
+                    <input type="text" placeholder="user@gmail.com">
+                <button>Subscribe</button>
+                </div>
             </div>
         </div>
       </div>
