--- a/index.html
+++ b/index.html
@@ -92,32 +92,68 @@
           </div>
           <div class="images">
             <div class="box-1">
-                <img src="images/Rectangle 3.png" alt="handbag">
-                <img src="images/Rectangle 4.png" alt="handbag">
-                <img src="images/Rectangle 5.png" alt="hill">
+              <img src="images/Rectangle 3.png" alt="handbag" />
+              <img src="images/Rectangle 4.png" alt="handbag" />
+              <img src="images/Rectangle 5.png" alt="hill" />
             </div>
             <div class="box-2">
-                <img src="images/Rectangle 6.png" alt="hill">
-                <img src="images/Rectangle 7.png" alt="sun glass">
-                <img src="images/Rectangle 8.png" alt="bangles">
+              <img src="images/Rectangle 6.png" alt="hill" />
+              <img src="images/Rectangle 7.png" alt="sun glass" />
+              <img src="images/Rectangle 8.png" alt="bangles" />
             </div>
           </div>
         </div>
       </div>
       <div class="container">
         <div class="subscribe-section">
-            <div class="content">
-                <img src="images/Group 61.png" alt="latter box">
-                <h1>Subscribe Newsletter</h1>
-                <p>If you are new here subscribe for getting latest news about our products. let us know your email where we will keep you update to meet your needs best.</p>
-                <div class="email-field">
-                    <input type="text" placeholder="user@gmail.com">
-                <button>Subscribe</button>
-                </div>
+          <div class="content">
+            <img src="images/Group 61.png" alt="latter box" />
+            <h1>Subscribe Newsletter</h1>
+            <p>
+              If you are new here subscribe for getting latest news about our
+              products. let us know your email where we will keep you update to
+              meet your needs best.
+            </p>
+            <div class="email-field">
+              <input type="text" placeholder="user@gmail.com" />
+              <button>Subscribe</button>
             </div>
+          </div>
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="container">
+        <div class="foot-head">
+            <address>
+              11/7 A-c Free School Street <br />KathalBagan Dhaka-1205
+            </address>
+            <div class="contact">
+              <div class="phone">
+                <img src="images/Call.png" alt="call icon" />
+                <p>+88 01676-841637</p>
+              </div>
+              <div class="website">
+                <img src="images/Website.png" alt="globe icon" />
+                <p>www.qualitybazar.com</p>
+              </div>
+            </div>
+          </div>
+      </div>
+      <hr />
+      <div class="social">
+        <img src="images/Facebook.png" alt="facebook icon" />
+        <img src="images/Instagram.png" alt="instagram icon" />
+        <img src="images/Twitter.png" alt="twitter icon" />
+        <img src="images/Linkedin.png" alt="linkedin icon" />
+      </div>
+      <hr />
+      <div class="container">
+        <div class="lower-footer">
+          <p>2024, All Rights Reserved.</p>
+          <p>Unsubscribe</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
