--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <div class="container">
         <div class="foot-head">
             <address>
-              11/7 A-c Free School Street <br />KathalBagan Dhaka-1205
+              11/7 A-C Free School Street <br />KathalBagan Dhaka-1205
             </address>
             <div class="contact">
               <div class="phone">
