added shadow over background images

--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
               midnight party
             </h1>
             <p>
-              You are most welcome to our new year party. You just need to be
-              open minded to join this party.We provide proper security at the
-              time of our events.
+              You are most welcome to our new year party celebration. You just need to check our website and select your products. We will deliver your products within 2 days at your door.
             </p>
             <p class="join">Join Now</p>
           </div>
@@ -79,7 +77,34 @@
           </div>
         </div>
       </div>
-
+      <div class="container">
+        <div class="sale-section">
+          <div class="discount-text">
+            <h6>WHAT IS FUNCTIONAL</h6>
+            <h1><span>Holidays</span> Sale 50%</h1>
+            <p>
+              We are giving up to 50% exciting discounts on some products for
+              this winter holydays.This will be available until 31 January 2024.
+              So collect your dreamed product and fulfil your dream.
+            </p>
+          </div>
+          <div class="upper-pic">
+            <img
+              class="discounts"
+              src="images/Group 44.png"
+              alt="50% discount"
+            />
+            <img
+              src="images/Rectangle 1.png"
+              alt="a girl is amazed with hand bag"
+            />
+          </div>
+          <div class="lower-pic">
+            <img class="box" src="images/Group 75.png" alt="gift box" />
+            <img class="red-bottom" src="images/Rectangle 2.png" alt="red rectangle" />
+          </div>
+        </div>
+      </div>
       <div class="container">
         <div class="portfolio-section">
           <div class="text-part">
@@ -107,7 +132,7 @@
       <div class="container">
         <div class="subscribe-section">
           <div class="content">
-            <img src="images/Group 61.png" alt="latter box" />
+            <img src="images/Group 61.png" alt="letter box" />
             <h1>Subscribe Newsletter</h1>
             <p>
               If you are new here subscribe for getting latest news about our
@@ -125,20 +150,20 @@
     <footer>
       <div class="container">
         <div class="foot-head">
-            <address>
-              11/7 A-C Free School Street <br />KathalBagan Dhaka-1205
-            </address>
-            <div class="contact">
-              <div class="phone">
-                <img src="images/Call.png" alt="call icon" />
-                <p>+88 01676-841637</p>
-              </div>
-              <div class="website">
-                <img src="images/Website.png" alt="globe icon" />
-                <p>www.qualitybazar.com</p>
-              </div>
+          <address>
+            11/7 A-C Free School Street <br />KathalBagan Dhaka-1205
+          </address>
+          <div class="contact">
+            <div class="phone">
+              <img src="images/Call.png" alt="call icon" />
+              <p>+88 01676-841637</p>
+            </div>
+            <div class="website">
+              <img src="images/Website.png" alt="globe icon" />
+              <p>www.qualitybazar.com</p>
             </div>
           </div>
+        </div>
       </div>
       <hr />
       <div class="social">
